--- a/estilos/style.css
+++ b/estilos/style.css
@@ -35,3 +35,12 @@ section#telefone {
     width: 311px;
     background: url('../imagens/frame-iphone.png') no-repeat; 
 }
+
+iframe#tela {
+    position: relative;
+    top: 80px;
+    left: 21px;
+    width: 269px;
+    height: 471px;
+    
+}
