--- a/estilos/style.css
+++ b/estilos/style.css
@@ -44,3 +44,21 @@ iframe#tela {
     height: 471px;
     
 }
+section#redes {
+    text-align: right;
+}
+
+section#redes img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.432);
+    box-sizing: border-box;
+}
+
+section#redes img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.603);
+    transform: translate(-3px, -3px);
+    box-shadow:5px 5px 10px rgba(0, 0, 0, 0.582) ;
+    transition: transform .4s, border .4s;
+}
